Bug 252247 - Fix unexpected IOKit use on Catalyst
Summary: Fix unexpected IOKit use on Catalyst
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Per Arne Vollan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-14 09:20 PST by Per Arne Vollan
Modified: 2023-02-20 10:32 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Arne Vollan 2023-02-14 09:20:13 PST
Fix unexpected IOKit use on Catalyst when all GPUP flags are enabled.
Comment 1 Radar WebKit Bug Importer 2023-02-14 09:20:34 PST
<rdar://problem/105453976>
Comment 2 Per Arne Vollan 2023-02-14 09:22:43 PST
Pull request: https://github.com/WebKit/WebKit/pull/10093
Comment 3 EWS 2023-02-20 10:32:33 PST
Committed 260547@main (1f83e37bcedf): <https://commits.webkit.org/260547@main>

Reviewed commits have been landed. Closing PR #10093 and removing active labels.