Fix unexpected IOKit use on Catalyst https://bugs.webkit.org/show_bug.cgi?id=252247 rdar://105453976

Reviewed by Simon Fraser.

If present, use the cached value for PPI provided by the UI process.

* Source/WebCore/platform/ios/PlatformScreenIOS.mm:
(WebCore::screenPPIFactor):

Canonical link: https://commits.webkit.org/260547@main